[package]
name = "boing"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.3.1"
glium = "*"
image = "*"
shrev = "1.1.1"
smallvec = "1.7.0"
rodio = "0.14.0"
rand = "0.8.4"