[package]
name = "cavern"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.0"
legion = "0.3.1"
winit = "0.21"
egui_glium="0.14.0"
egui="0.14.0"
image = "0.23.14"
shrev = "1.1.1"
smallvec = "1.7.0"
rodio = "0.14.0"
rand = "0.8.4"
itertools = "0.10.3"